# ascent-document-operations

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1020b3ec0010_create_tenants_and_users.py
apps/api/: main.py
docs/architecture/: local-ai-migration-plan.md  system-architecture.md
docs/architecture/decisions/: 0001-cloud-first-architecture.md  0002-local-ai-private-inference-worker.md
docs/business/: customer-interviews.md  market-research.md  pricing.md
docs/learning/: master-plan.md
docs/product/: customer-persona.md  pilot-plan.md  product-vision.md  requirements.md
src/ascent/shared/: config.py  db.py  logging.py  models.py
src/project_automation/: schema.py
tests/integration/: test_models.py
tests/unit/: test_config.py  test_health.py  test_schema.py
